--- a/packages/labelmap-interpolation/package.json
+++ b/packages/labelmap-interpolation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cornerstonejs/labelmap-interpolation",
+  "name": "@tunglt91/cornerstonejs.labelmap-interpolation",
   "version": "3.25.0",
   "description": "Labelmap Interpolation utility for Cornerstone3D",
   "files": [
