--- a/packages/polymorphic-segmentation/package.json
+++ b/packages/polymorphic-segmentation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cornerstonejs/polymorphic-segmentation",
+  "name": "@tunglt91/cornerstonejs.polymorphic-segmentation",
   "version": "3.25.0",
   "description": "Polymorphic Segmentation utility for Cornerstone3D",
   "files": [
