--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cornerstonejs/ai",
+  "name": "@tunglt91/cornerstonejs.ai",
   "version": "3.25.0",
   "description": "AI and ML Interfaces for Cornerstone3D",
   "files": [
