--- a/packages/dicomImageLoader/package.json
+++ b/packages/dicomImageLoader/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cornerstonejs/dicom-image-loader",
+  "name": "@tunglt91/cornerstonejs.dicom-image-loader",
   "version": "3.25.0",
   "description": "Cornerstone Image Loader for DICOM WADO-URI and WADO-RS and Local file",
   "keywords": [
