--- a/packages/nifti-volume-loader/package.json
+++ b/packages/nifti-volume-loader/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cornerstonejs/nifti-volume-loader",
+  "name": "@tunglt91/cornerstonejs.nifti-volume-loader",
   "version": "3.25.0",
   "description": "Nifti Image Loader for Cornerstone3D",
   "module": "./dist/esm/index.js",
